Add missing locking calls to eso_attach() to avoid panic on boot. Partly based on a patch from mrg.  Fixes PR kern/46791.